Fixed horizontal scroll bar

--- a/final-design/styles/main/style.css
+++ b/final-design/styles/main/style.css
@@ -72,7 +72,6 @@
   display: none;
 }
 .featuresList {
-  width: 100%;
   padding-left: 7.421%;
 }
 .featuresList li {
